fix tables styles/bugs

--- a/css/my-customized-bulma.css
+++ b/css/my-customized-bulma.css
@@ -2494,7 +2494,7 @@ a.box:active {
   color: white; }
   .table td,
   .table th {
-    border: 1px solid #dbdbdb;
+    border: solid 1px #141414;
     border-width: 0 0 1px;
     padding: 0.5em 0.75em;
     vertical-align: top; }
@@ -2601,16 +2601,16 @@ a.box:active {
   .table.is-fullwidth {
     width: 100%; }
   .table.is-hoverable tbody tr:not(.is-selected):hover {
-    background-color: #fafafa; }
+    background-color: #1a1a1a; }
   .table.is-hoverable.is-striped tbody tr:not(.is-selected):hover {
-    background-color: #fafafa; }
+    background-color: #1a1a1a; }
     .table.is-hoverable.is-striped tbody tr:not(.is-selected):hover:nth-child(even) {
-      background-color: whitesmoke; }
+      background-color: #333333; }
   .table.is-narrow td,
   .table.is-narrow th {
     padding: 0.25em 0.5em; }
   .table.is-striped tbody tr:not(.is-selected):nth-child(even) {
-    background-color: #fafafa; }
+    background-color: #262626; }
 
 .table-container {
   -webkit-overflow-scrolling: touch;
