blur make order when not logged in , fix amount/price calculations

--- a/css/my-customized-bulma.css
+++ b/css/my-customized-bulma.css
@@ -7116,7 +7116,10 @@ label.panel-block {
 .amount {
   position: relative; }
 
-.amount .coin {
+.amount .coin, .coin1-coin2-rate .price {
   position: absolute;
   right: 5px;
   top: 8px; }
+
+.is-blur {
+  filter: blur(3px); }
